# charlottelang

./: .gitignore  CLAUDE.md  README.md  charlotte.py  pyproject.toml
.github/workflows/: ci.yml
apps/: dog_facts.bark  pet_shelter_api.bark
examples/: fizzbuzz.bark  full_day.bark  hello.bark  helpers.bark  new_features.bark  server.bark
tests/: test_charlotte.py
