[project]
name = "charlottelang"
version = "4.0.0"
description = "A Pythonic programming language with chihuahua soul and pitbull energy 🐕"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[project.scripts]
charlotte = "charlotte:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
